Added the passing of the query type (similarity or search) as a parameter to be displayed in the results

--- a/nodeapp/views/results.jade
+++ b/nodeapp/views/results.jade
@@ -9,7 +9,7 @@ block head
 block content
 	#results.container
 		.well.well-sm
-		    | <strong>Search results for: #{query}</strong>
+		    | <strong>#{type} results for: #{query}</strong>
 		    .btn-group
 		    	a#list.btn.btn-default.btn-sm(href='#')
     			span.glyphicon.glyphicon-th-list
