--- a/nodeapp/views/layout.jade
+++ b/nodeapp/views/layout.jade
@@ -1,7 +1,12 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title= title
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
+		script(src='/bootstrap/js/bootstrap.min.js')
+		link(rel='stylesheet', href='../UserInterface/css/stylish-portfolio.css')
+		link(rel='stylesheet', href='../UserInterface/font-awesome/css/font-awesome.min.css')
+		link(rel='stylesheet', href='../UserInterface/css/search.css')
+	body
+		block content
