--- a/nodeapp/views/results.jade
+++ b/nodeapp/views/results.jade
@@ -12,7 +12,7 @@ block content
 					span.glyphicon.glyphicon-th
 					| Grid
 
-		#products.row.grid-group
+		#products.row.list-group
 			for hit in hits
 				.item.col-xs-4.col-lg-4
 					.thumbnail
