--- a/nodeapp/views/results.jade
+++ b/nodeapp/views/results.jade
@@ -30,7 +30,11 @@ block content
 								.col-xs-12.col-md-offset-4.col-md-4
 									a.btn.btn-success.btn-block(href='#') View
 									a.btn.btn-info.btn-block(href='/similar/' + encodeURIComponent(hit._id)) Similar
-
+	script
+		$(document).ready(function() {
+		$('#list').click(function(event){event.preventDefault();$('#products .item').addClass('list-group-item');});
+		$('#grid').click(function(event){event.preventDefault();$('#products .item').removeClass('list-group-item');$('#products .item').addClass('grid-group-item');});
+		});
 
 
 // block comment
