--- a/nodeapp/views/layout.jade
+++ b/nodeapp/views/layout.jade
@@ -6,8 +6,8 @@ html
 		link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
 		script(src='/bootstrap/js/bootstrap.min.js')
 		script(src='/jquery/jquery-1.10.2.js')
-		link(rel='stylesheet', href='../UserInterface/css/stylish-portfolio.css')
-		link(rel='stylesheet', href='../UserInterface/font-awesome/css/font-awesome.min.css')
-		link(rel='stylesheet', href='../UserInterface/css/search.css')
+		link(rel='stylesheet', href='../../UserInterface/css/stylish-portfolio.css')
+		link(rel='stylesheet', href='../../UserInterface/font-awesome/css/font-awesome.min.css')
+		link(rel='stylesheet', href='../../UserInterface/css/search.css')
 	body
 		block content
