--- a/nodeapp/views/results.jade
+++ b/nodeapp/views/results.jade
@@ -4,13 +4,6 @@ block content
 	#results.container
 		.well.well-sm
 			| <strong>#{type} results for: #{query}</strong>
-			.btn-group
-				a#list.btn.btn-default.btn-sm(href='#')
-					span.glyphicon.glyphicon-th-list
-					| List
-				a#grid.btn.btn-default.btn-sm(href='#')
-					span.glyphicon.glyphicon-th
-					| Grid
 
 		#products.row.list-group
 			for hit in hits
@@ -18,24 +11,18 @@ block content
 					.thumbnail
 						.caption
 							.row
-								.col-xs-12.col-md-7
+								.col-xs-12.col-md-7.col-lg-7
 									h4.group.inner.list-group-item-heading
 										| #{hit._source.speakername}
-								.col-xs-12.col-md-4
+								.col-xs-12.col-md-4.col-lg-4
 									p.lead(align='right')
 										| #{hit._source.date}
 							p.group.inner.list-group-item-text
 								| #{hit._source.content}
 							.row
-								.col-xs-12.col-md-offset-4.col-md-4
+								.col-xs-12.col-md-offset-4.col-md-4.col-lg-offset-4.col-lg-4
 									a.btn.btn-success.btn-block(href='/view/' + encodeURIComponent(hit._id)) View
 									a.btn.btn-info.btn-block(href='/similar/' + encodeURIComponent(hit._id)) Similar
-	script.
-		$(document).ready(function() {
-			$('#list').click(function(event){event.preventDefault();$('#products .item').addClass('list-group-item');});
-			$('#grid').click(function(event){event.preventDefault();$('#products .item').removeClass('list-group-item');$('#products .item').addClass('grid-group-item');});
-		});
-
 
 // block comment
 					a(href='/similar/' + encodeURIComponent(hit._id))
