--- a/nodeapp/views/results.jade
+++ b/nodeapp/views/results.jade
@@ -7,7 +7,7 @@ block content
 
 		#products.row.list-group
 			for hit in hits
-				.item.col-xs-4.col-lg-4
+				.item.col-xs-12.col-md-12.col-lg-12
 					.thumbnail
 						.caption
 							.row
